--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 *.so
 
 # Distribution / packaging
+out/
 .Python
 build/
 develop-eggs/
@@ -161,3 +162,4 @@ cython_debug/
 #.idea/
 
 .vscode
+.idea
